--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "r-watermark",
   "version": "0.1.5",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "fix777 <wangguoguo.lan@gmail.com>",
   "license": "MIT",
   "repository": {
